# DSA

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE.txt  Makefile  README.md  alembic.ini  docker-compose.dev.yml  env.example  pyproject.toml
alembic/: README  env.py
alembic/versions/: __init__.py  a8058123e4d1_initial_migration.py
scripts/: setup_env.py
src/ontario_driving_school_manager/: __init__.py  __main__.py  main.py
src/ontario_driving_school_manager/config/: __init__.py  logging.py  logging.yaml  settings.py
src/ontario_driving_school_manager/core/: __init__.py  events.py  exceptions.py
src/ontario_driving_school_manager/data/: __init__.py  base.py  db_setup.py  session.py
src/ontario_driving_school_manager/data/repositories/: __init__.py  base.py  student.py
src/ontario_driving_school_manager/models/: __init__.py  base.py  student.py
src/ontario_driving_school_manager/schemas/: __init__.py  base.py
src/ontario_driving_school_manager/services/: __init__.py  base.py
src/ontario_driving_school_manager/utils/: __init__.py  config_utils.py  logging_utils.py
tests/: test_student_crud.py
